Improve base scraper with better error handling, logging, and rate limiting. Update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
 requests
 beautifulsoup4
-pandas
-python-dotenv
+feedparser
+ratelimit
 lxml
-schedule
-numpy
-feedparser 
+python-dateutil
+typing-extensions
+urllib3
+certifi 
